test/syntax/pass/causality/5.sync
let node no_cycle a b = c where
  c = a + b
