test/syntax/fail/causality/0.sync
let node f x = y
  where y = y + 1
